h3 missing on nosotros and h1 fix to prevent horizontal scroll on index

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ text styles
   padding: 0;
   position: absolute;
   z-index: -1;
+  width: 50%;
 }
 
 h1 {
