--- a/scss/components/_base.scss
+++ b/scss/components/_base.scss
@@ -49,6 +49,7 @@ text styles
     padding: 0;
     position: absolute;
     z-index: -1;
+    width:50%;
 }
 
 h1 {
